update for mobile

--- a/generate_html_from_emails.ipynb
+++ b/generate_html_from_emails.ipynb
@@ -19,7 +19,6 @@
     "import pandas as pd\n",
     "from bs4 import BeautifulSoup\n",
     "# import re\n",
-    "import pdfkit\n",
     "\n",
     "from IPython.display import display, HTML\n",
     "import time\n",
@@ -100,14 +99,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Parsed 564 gmail messages to seattle.housing.feed@gmail.com\n"
+      "Parsed 564 gmail messages to seattle.housing.feed@gmail.com\n",
+      "CPU times: user 16.5 s, sys: 1.1 s, total: 17.6 s\n",
+      "Wall time: 17.7 s\n"
      ]
     }
    ],
@@ -153,7 +154,7 @@
     "    for element in elements_to_remove:\n",
     "        element.extract()\n",
     "        \n",
-    "    email_res['html'] = str(bs4.html.prettify())\n",
+    "    email_res['html'] = str(bs4.html)\n",
     "    email_res['bs4'] = bs4    \n",
     "    return email_res\n",
     "\n",
@@ -169,15 +170,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 45.5 ms, sys: 24.4 ms, total: 69.9 ms\n",
-      "Wall time: 79.4 ms\n"
+      "CPU times: user 56.4 ms, sys: 96.7 ms, total: 153 ms\n",
+      "Wall time: 162 ms\n"
      ]
     }
    ],
@@ -186,13 +187,29 @@
     "header = \"\"\"\n",
     "<head>\n",
     "  <title>Seattle Housing Inbox</title>\n",
-    "  <style> html {\n",
-    "    zoom: 180%;\n",
-    "    margin: 50px;\n",
-    "  }</style>\n",
+    "  <style>\n",
+    "      /* Styles for desktop */\n",
+    "      body {\n",
+    "          zoom: 150%;\n",
+    "          margin: 50px;\n",
+    "      }\n",
+    "\n",
+    "      img {\n",
+    "          max-width: 100%;\n",
+    "          height: auto;\n",
+    "      }\n",
+    "\n",
+    "      /* Styles for mobile */\n",
+    "      @media screen and (max-width: 600px) {\n",
+    "          body {\n",
+    "              zoom: 90%;\n",
+    "              margin: 5px;\n",
+    "          }\n",
+    "      }\n",
+    "  </style>\n",
     "</head>\n",
     "\"\"\"\n",
-    "html_file = f'index.html'\n",
+    "html_file = 'index.html'\n",
     "with open(html_file, 'w') as file:\n",
     "  file.write(header + emails['html'].str.cat(sep='\\n'))"
    ]
@@ -203,6 +220,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pdfkit\n",
     "pdf_file = html_file.replace('.html', '.pdf')\n",
     "pdfkit.from_file(html_file, pdf_file) #, options={'quiet': '', 'lowquality': ''}\n",
     "print(\"PDF file created:\", pdf_file)"
