--- a/generate_html_from_emails.ipynb
+++ b/generate_html_from_emails.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-07-11\n"
+      "2023-07-30\n"
      ]
     }
    ],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,10 @@
       "Skipping email not in from_allow_list, From: Google <no-reply@accounts.google.com>\n",
       "Skipping email not in from_allow_list, From: Google <no-reply@accounts.google.com>\n",
       "Skipping email not in from_allow_list, From: Google <no-reply@accounts.google.com>\n",
-      "Fetched 564 gmail messages to seattle.housing.feed@gmail.com\n"
+      "Skipping email not in from_allow_list, From: Google Accounts Team <no-reply@accounts.google.com>\n",
+      "Fetched 618 gmail messages to seattle.housing.feed@gmail.com\n",
+      "CPU times: user 6.94 s, sys: 720 ms, total: 7.66 s\n",
+      "Wall time: 2min 4s\n"
      ]
     }
    ],
@@ -99,16 +102,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Parsed 564 gmail messages to seattle.housing.feed@gmail.com\n",
-      "CPU times: user 16.5 s, sys: 1.1 s, total: 17.6 s\n",
-      "Wall time: 17.7 s\n"
+      "Parsed 618 gmail messages to seattle.housing.feed@gmail.com\n",
+      "CPU times: user 16.4 s, sys: 708 ms, total: 17.1 s\n",
+      "Wall time: 17.2 s\n"
      ]
     }
    ],
@@ -170,15 +173,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 56.4 ms, sys: 96.7 ms, total: 153 ms\n",
-      "Wall time: 162 ms\n"
+      "CPU times: user 57.1 ms, sys: 79.9 ms, total: 137 ms\n",
+      "Wall time: 148 ms\n"
      ]
     }
    ],
@@ -220,10 +223,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pdfkit\n",
-    "pdf_file = html_file.replace('.html', '.pdf')\n",
-    "pdfkit.from_file(html_file, pdf_file) #, options={'quiet': '', 'lowquality': ''}\n",
-    "print(\"PDF file created:\", pdf_file)"
+    "# import pdfkit\n",
+    "# pdf_file = html_file.replace('.html', '.pdf')\n",
+    "# pdfkit.from_file(html_file, pdf_file) #, options={'quiet': '', 'lowquality': ''}\n",
+    "# print(\"PDF file created:\", pdf_file)"
    ]
   }
  ],
